--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto bg-white font-mono rounded-sm min-h-screen">
-
+<!--header start-->
   <div class="flex justify-between items-center p-4 px-6">
     <mat-form-field appearance="fill">
       <mat-label>Choose Template</mat-label>
@@ -59,4 +59,31 @@
       </div>
     </div>
   </div>
+<!--header end-->
+
+<!--employee spotlight start-->
+<div class="w-5/6 flex flex-col mx-auto px-4 py-6 mt-4 border border-gray-400 rounded-sm">
+  <div class="py-6 bg-[url('https://picsum.photos/1600/140?grayscale')]">
+    <div class="h-auto bg-cyan-600 text-center p-4 text-white font-semi-bold text-2xl opacity-80">Employee Spotlight
+    </div>
+  </div>
+  <div class="flex flex-col pt-4" cdkDropList (cdkDropListDropped)="drop($event)">
+    <div class="flex m-4 mx-6 p-4 border-cyan-500 border-2 rounded-sm" *ngFor="let employee of employees" cdkDrag>
+      <div class="h-44 w-40 flex-none px-2 flex flex-col justify-center items-center bg-cyan-600 bg-opacity-75 rounded-2xl">
+        <img [src]="employee.imgUrl" class="w-20 h-20 rounded-full" alt="">
+        <div class="flex text-white mt-2">{{employee.name}}</div>
+        <div class="flex flex-col text-white justify-center items-center mt-2">
+          <div class="text-sm">Software developer</div>
+          <div class="text-sm">1 Austin</div>
+        </div>
+      </div>
+      <div class="flex justify-center items-center px-6"> Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit. Enim deleniti voluptates excepturi accusamus, recusandae eaque eligendi corrupti consequuntur nam
+        minima odio quam commodi ex maiores architecto, impedit praesentium tempore consequatur! </div>
+    </div>
+  </div>
 </div>
+<!--employee spotlight end-->
+
+</div>
+
