--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -459,9 +459,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .mr-2 {
@@ -472,12 +481,36 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0px;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .flex {
   display: flex;
 }
 
 .h-5 {
   height: 1.25rem;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-44 {
+  height: 11rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .min-h-screen {
@@ -492,8 +525,44 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.25rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
+}
+
+.flex-none {
+  flex: none;
+}
+
 .cursor-default {
   cursor: default;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -532,6 +601,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .border {
@@ -576,6 +649,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
+.border-cyan-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(6 182 212 / var(--tw-border-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -594,6 +672,35 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-teal-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+}
+
+.bg-cyan-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-75 {
+  --tw-bg-opacity: 0.75;
+}
+
+.bg-\[url\(\'https\:\/\/picsum\.photos\/900\/140\?grayscale\'\)\] {
+  background-image: url('https://picsum.photos/900/140?grayscale');
+}
+
+.bg-\[url\(\'https\:\/\/picsum\.photos\/00\/140\?grayscale\'\)\] {
+  background-image: url('https://picsum.photos/00/140?grayscale');
+}
+
+.bg-\[url\(\'https\:\/\/picsum\.photos\/1200\/140\?grayscale\'\)\] {
+  background-image: url('https://picsum.photos/1200/140?grayscale');
+}
+
+.bg-\[url\(\'https\:\/\/picsum\.photos\/1400\/140\?grayscale\'\)\] {
+  background-image: url('https://picsum.photos/1400/140?grayscale');
+}
+
+.bg-\[url\(\'https\:\/\/picsum\.photos\/1600\/140\?grayscale\'\)\] {
+  background-image: url('https://picsum.photos/1600/140?grayscale');
 }
 
 .p-6 {
@@ -633,12 +740,36 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
 
 .font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -667,6 +798,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.opacity-80 {
+  opacity: 0.8;
 }
 
 .shadow-sm {
