--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto bg-white font-mono rounded-sm min-h-screen">
+<div class="container mx-auto bg-white font-mono rounded-lg min-h-screen pt-4">
   <!--header start-->
   <div class="flex justify-between items-center p-4 px-6">
     <mat-form-field appearance="fill">
