--- a/src/app/templates/preview-raghav-template/preview-raghav-template.component.html
+++ b/src/app/templates/preview-raghav-template/preview-raghav-template.component.html
@@ -1,3 +1,54 @@
-<p>preview-raghav-template works!</p>
+<!DOCTYPE html>
+<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" id="foo">
 
-{{employees | json}}
+<head>
+  <meta charset="utf-8">
+  <meta name="x-apple-disable-message-reformatting">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
+  <!--[if mso]>
+  <noscript>
+    <xml>
+      <o:OfficeDocumentSettings xmlns:o="urn:schemas-microsoft-com:office:office">
+        <o:PixelsPerInch>96</o:PixelsPerInch>
+      </o:OfficeDocumentSettings>
+    </xml>
+  </noscript>
+  <style>
+    td,th,div,p,a,h1,h2,h3,h4,h5,h6 {font-family: "Segoe UI", sans-serif; mso-line-height-rule: exactly;}
+  </style>
+  <![endif]-->
+  <title>The Website Weekly Newsletter</title>
+</head>
+
+<body
+  style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #f3f4f6;">
+  <div style="display: none;">👀 Lorem, ipsum, and much dolor in this week's edition&#847; &#847; &#847; &#847; &#847;
+    &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847;
+    &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847;
+    &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847;
+    &#847; &#847; &#847; &zwnj;
+    &#160;&#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847;
+    &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847;
+    &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847;
+    &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847; &zwnj;
+    &#160;&#847; &#847; &#847; &#847; &#847; </div>
+  <div role="article" aria-roledescription="email" aria-label="The Website Weekly Newsletter" lang="en">
+    <table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
+      <tr>
+        <td>
+          <div
+            style="background-image: url('https://picsum.photos/1600/140?grayscale'); padding-top: 16px; padding-bottom: 16px;">
+            <div
+              style="height: auto; background-color: #7f1d1d; padding: 24px; text-align: center; font-size: 24px; font-weight: 700; color: #000000; opacity: 0.8;">
+              Employee Spotlight
+            </div>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </div>
+</body>
+
+</html>
