--- a/src/app/templates/preview-raghav-template/preview-raghav-template.component.html
+++ b/src/app/templates/preview-raghav-template/preview-raghav-template.component.html
@@ -37,15 +37,9 @@
   <div role="article" aria-roledescription="email" aria-label="The Website Weekly Newsletter" lang="en">
     <table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
-        <td>
-          <div
-            style="background-image: url('https://picsum.photos/1600/140?grayscale'); padding-top: 16px; padding-bottom: 16px;">
-            <div
-              style="height: auto; background-color: #7f1d1d; padding: 24px; text-align: center; font-size: 24px; font-weight: 700; color: #000000; opacity: 0.8;">
-              Employee Spotlight
-            </div>
-          </div>
-        </td>
+        <td align="center"
+          style="background-color: #60a5fa; padding: 28px; font-size: 30px; font-weight: 700; color: #ffffff;">Employee
+          Spotlight</td>
       </tr>
     </table>
   </div>
