--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <div class="container mx-auto bg-white font-mono rounded-lg min-h-screen pt-4">
   <!--header start-->
   <div class="flex justify-between items-center p-4 px-6">
@@ -22,7 +23,7 @@
       <mat-date-range-picker #picker></mat-date-range-picker>
     </mat-form-field>
     <div class="flex items-center bg-gray-100 rounded-full py-2 px-2 space-x-1">
-      <button routerLink="/edit-raghav-template"
+      <!-- <button routerLink="/edit-raghav-template"
         [ngClass]="active === 'edit' ? 'bg-white text-teal-500 shadow-sm border-gray-300 border' : 'border-0 hover:opacity-75 text-gray-500 hover:bg-gray-200'"
         (click)="active = 'edit'"
         class="w-32 rounded-full py-1 font-bold transition flex items-center text-center justify-center text-teal-500 tracking-wider">
@@ -32,18 +33,18 @@
             d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
         </svg>
         Edit
-      </button>
+      </button> -->
       <button routerLink="/preview-raghav-template"
         [ngClass]="active === 'preview' ? 'bg-white text-teal-500 shadow-sm border-gray-300 border' : 'border-0 hover:opacity-75 text-gray-500 hover:bg-gray-200'"
         (click)="active = 'preview'"
-        class="w-32 rounded-full py-1 font-bold transition flex items-center text-center justify-center text-teal-500 tracking-wider">
+        class="w-auto px-4 rounded-full py-1 font-bold transition flex items-center text-center justify-center text-teal-500 tracking-wider">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
           <path d="M10 12a2 2 0 100-4 2 2 0 000 4z"></path>
           <path fill-rule="evenodd"
             d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z"
             clip-rule="evenodd"></path>
         </svg>
-        Preview
+        Build News Letter
       </button>
 
     </div>
@@ -61,7 +62,9 @@
     </div>
   </div>
   <!--header end-->
+  <div  #screen>
   <router-outlet></router-outlet>
+  </div>
 
 
 </div>
