test image append

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,8 +63,102 @@
   </div>
   <!--header end-->
   <div  #screen>
-  <router-outlet></router-outlet>
+    <div class="flex items-center gap-8 mt-4 px-6">
+      <div class="w-1/4 p-6 border-2 border-cyan-500 rounded-3xl">
+
+        <div class="flex flex-col gap-2 justify-center items-center"> <span
+            class="tracking-wide font-bold text-2xl mt-2 text-blue-700">
+            Cashering</span>
+          <hr class="h-1 bg-gray-400 w-full">
+        </div>
+        <div class="flex flex-col gap-4 mt-6">
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-blue-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Deployment</span>
+          </div>
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-green-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Success</span>
+          </div>
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-orange-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Incidents</span>
+          </div>
+        </div>
+
+      </div>
+      <div class="w-1/4 p-6 border-2 border-cyan-500 rounded-3xl">
+
+        <div class="flex flex-col gap-2 justify-center items-center"> <span
+            class="tracking-wide font-bold text-2xl mt-2 text-blue-700">
+            Digital Utilities</span>
+          <hr class="h-1 bg-gray-400 w-full">
+        </div>
+        <div class="flex flex-col gap-4 mt-6">
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-blue-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Deployment</span>
+          </div>
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-green-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Success</span>
+          </div>
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-orange-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Incidents</span>
+          </div>
+        </div>
+
+      </div>
+      <div class="w-1/4 p-6 border-2 border-cyan-500 rounded-3xl">
+
+        <div class="flex flex-col gap-2 justify-center items-center"> <span
+            class="tracking-wide font-bold text-2xl mt-2 text-blue-700">
+            CAST</span>
+          <hr class="h-1 bg-gray-400 w-full">
+        </div>
+        <div class="flex flex-col gap-4 mt-6">
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-blue-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Deployment</span>
+          </div>
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-green-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Success</span>
+          </div>
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-orange-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Incidents</span>
+          </div>
+        </div>
+
+      </div>
+      <div class="w-1/4 p-6 border-2 border-cyan-500 rounded-3xl">
+
+        <div class="flex flex-col gap-2 justify-center items-center"> <span
+            class="tracking-wide font-bold text-2xl mt-2 text-blue-700">
+            CMAS</span>
+          <hr class="h-1 bg-gray-400 w-full">
+        </div>
+        <div class="flex flex-col gap-4 mt-6">
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-blue-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Deployment</span>
+          </div>
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-green-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Success</span>
+          </div>
+          <div class="text-xl font-bold flex items-center gap-2">
+            <span class="border-8 border-orange-400 rounded-full p-2">45</span>
+            <span class="tracking-wide">Incidents</span>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
+  <router-outlet></router-outlet>
 
 
 </div>
